--- a/Caddyfile
+++ b/Caddyfile
@@ -15,11 +15,9 @@
 	# Enable the static file server.
 	file_server
 
-	# Another common task is to set up a reverse proxy:
-	# reverse_proxy localhost:8080
-
-	# Or serve a PHP site through php-fpm:
-	# php_fastcgi localhost:9000
+	basic_auth {
+		prereview {$PASSWORD}
+	}
 }
 
 # Refer to the Caddy docs for more information:
