Let the example dashboard and report display
Refs https://caddyserver.com/docs/caddyfile/directives/try_files

--- a/Caddyfile
+++ b/Caddyfile
@@ -12,6 +12,8 @@
 	# Set this path to your site's directory.
 	root * /usr/share/caddy
 
+	try_files {path}.html
+
 	# Enable the static file server.
 	file_server
 
