--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "d3-time-format": "^4.1.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "prettier": "^3.3.2",
+    "prettier-plugin-sh": "^0.14.0",
+    "prettier-plugin-toml": "^2.0.1",
     "rimraf": "^5.0.5"
   },
   "engines": {
