--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,35 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
+  build-image:
+    name: 'Build image'
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    outputs:
+      image: ${{ steps.build.outputs.imageid }}
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v4.1.6
+
+      - name: 'Set up Docker Build'
+        uses: docker/setup-buildx-action@v3.3.0
+
+      - name: 'Build image'
+        id: build
+        uses: docker/build-push-action@v5.3.0
+        with:
+          outputs: type=docker,dest=/tmp/image.tar
+          cache-from: type=gha,ignore-error=true
+          cache-to: type=gha,mode=max,ignore-error=true
+          target: prod
+
+      - name: 'Upload build'
+        uses: actions/upload-artifact@v4.3.3
+        with:
+          name: image
+          path: /tmp/image.tar
+
   format:
     name: 'Format'
     runs-on: ubuntu-22.04
