--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@effect/platform": "^0.57.4",
+    "@effect/platform-node": "^0.51.13",
+    "@effect/schema": "^0.68.1",
     "@observablehq/framework": "^1.9.0",
     "d3-dsv": "^3.0.1",
-    "d3-time-format": "^4.1.0"
+    "d3-time-format": "^4.1.0",
+    "effect": "^3.3.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.14.5",
     "prettier": "^3.3.2",
     "prettier-plugin-sh": "^0.14.0",
     "prettier-plugin-toml": "^2.0.1"
