--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@effect/platform": "^0.57.4",
     "@effect/platform-node": "^0.51.13",
     "@effect/schema": "^0.68.1",
+    "@js-temporal/polyfill": "^0.4.4",
     "@observablehq/framework": "^1.9.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
