--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@observablehq/framework": "^1.9.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
-    "effect": "^3.3.5"
+    "effect": "^3.3.5",
+    "iso-639-1": "^3.1.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
