--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
     name: 'Format'
     runs-on: ubuntu-22.04
     timeout-minutes: 30
+    if: github.event_name != 'schedule'
 
     steps:
       - name: 'Checkout code'
@@ -70,7 +71,7 @@ jobs:
     name: 'Push image'
     runs-on: ubuntu-22.04
     timeout-minutes: 30
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && !failure() && !cancelled()
     outputs:
       image: ${{ steps.image.outputs.image }}
     needs:
