--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
           outputs: type=docker,dest=/tmp/image.tar
           cache-from: type=gha,ignore-error=true
           cache-to: type=gha,mode=max,ignore-error=true
+          no-cache-filters: build
           target: prod
 
       - name: 'Upload build'
