--- a/fly.toml
+++ b/fly.toml
@@ -13,3 +13,11 @@ processes = ['app']
 
 [[vm]]
 size = 'shared-cpu-1x'
+
+[[services.http_checks]]
+grace_period = "2s"
+interval = "5s"
+method = "get"
+path = "/health"
+protocol = "http"
+timeout = "1s"
