--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,28 @@ jobs:
       - name: 'Run formatter'
         run: npx prettier --ignore-unknown --check '**'
 
+  typecheck:
+    name: 'Typecheck'
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    if: github.event_name != 'schedule'
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v4.1.7
+
+      - name: 'Set up Node.js'
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version-file: package.json
+          cache: ${{ !env.ACT && 'npm' || '' }}
+
+      - name: 'Install dependencies'
+        run: npm ci
+
+      - name: 'Run typechecker'
+        run: npx tsc --noEmit
+
   push:
     name: 'Push image'
     runs-on: ubuntu-22.04
@@ -81,6 +103,7 @@ jobs:
     needs:
       - build-image
       - format
+      - typecheck
 
     steps:
       - name: 'Set up flyctl'
