--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/node": "^20.14.5",
     "prettier": "^3.3.2",
     "prettier-plugin-sh": "^0.14.0",
-    "prettier-plugin-toml": "^2.0.1"
+    "prettier-plugin-toml": "^2.0.1",
+    "typescript": "^5.5.2"
   },
   "engines": {
     "node": ">=18"
