--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "iso-639-1": "^3.1.2"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
