--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
           cache-to: type=gha,mode=max,ignore-error=true
           no-cache-filters: build
           target: prod
+          secrets: |
+            PREREVIEW_REVIEWS_DATA_TOKEN=${{ secrets.PREREVIEW_REVIEWS_DATA_TOKEN }}
 
       - name: 'Upload build'
         uses: actions/upload-artifact@v4.3.3
