--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,3 +26,6 @@ updates:
         patterns:
           - '@effect/*'
           - 'effect'
+      typescript-eslint:
+        patterns:
+          - '@typescript-eslint/*'
