--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
     name: 'Build image'
     runs-on: ubuntu-22.04
     timeout-minutes: 30
+    if: github.ref == 'refs/heads/main'
     outputs:
       image: ${{ steps.build.outputs.imageid }}
 
