--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,20 @@ jobs:
       - name: 'Set up Docker Build'
         uses: docker/setup-buildx-action@v3.3.0
 
+      - name: 'Set up Node.js'
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version-file: package.json
+          cache: ${{ !env.ACT && 'npm' || '' }}
+
+      - name: 'Install dependencies'
+        run: npm ci
+
+      - name: 'Build dist'
+        run: npx observable build
+        env:
+          PREREVIEW_REVIEWS_DATA_TOKEN: ${{ secrets.PREREVIEW_REVIEWS_DATA_TOKEN }}
+
       - name: 'Build image'
         id: build
         uses: docker/build-push-action@v5.3.0
