Debug the action
Refs #28, 3bc32c02b4763e62e99a1ec99953482a5741dc82

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,11 @@ jobs:
         env:
           PREREVIEW_REVIEWS_DATA_TOKEN: ${{ secrets.PREREVIEW_REVIEWS_DATA_TOKEN }}
 
+      - name: 'Debug'
+        run: |
+          pwd
+          ls -l
+
       - name: 'Build image'
         id: build
         uses: docker/build-push-action@v5.3.0
