--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "effect": "^3.3.5",
+    "i18n-iso-countries": "^7.11.2",
     "iso-639-1": "^3.1.2"
   },
   "devDependencies": {
