--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,6 +142,28 @@ jobs:
       - name: 'Run the linter'
         run: npx eslint . --max-warnings 0
 
+  test:
+    name: 'test'
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    if: github.event_name != 'schedule'
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v4.1.7
+
+      - name: 'Set up Node.js'
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version-file: package.json
+          cache: ${{ !env.ACT && 'npm' || '' }}
+
+      - name: 'Install dependencies'
+        run: npm ci
+
+      - name: 'Run the tests'
+        run: npx vitest run
+
   typecheck:
     name: 'Typecheck'
     runs-on: ubuntu-22.04
@@ -175,6 +197,7 @@ jobs:
       - build-image
       - format
       - lint
+      - test
       - typecheck
 
     steps:
