--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "prettier": "^3.3.2",
     "prettier-plugin-sh": "^0.14.0",
     "prettier-plugin-toml": "^2.0.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
+    "vitest": "^2.0.1"
   },
   "engines": {
     "node": ">=18"
