--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
         run: npx eslint . --max-warnings 0
 
   test:
-    name: 'test'
+    name: 'Test'
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     if: github.event_name != 'schedule'
