--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@observablehq/framework": "^1.9.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
+    "diacritics": "^1.3.0",
     "effect": "^3.3.5",
     "i18n-iso-countries": "^7.11.2",
-    "iso-639-1": "^3.1.2"
+    "iso-639-1": "^3.1.2",
+    "world_countries_lists": "^2.9.0"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/diacritics": "^1.3.3",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
