--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@effect/schema": "^0.68.1",
     "@js-temporal/polyfill": "^0.4.4",
     "@observablehq/framework": "^1.9.0",
+    "@vvo/tzdb": "^6.141.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "diacritics": "^1.3.0",
