--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@js-temporal/polyfill": "^0.4.4",
     "@observablehq/framework": "^1.9.0",
     "@vvo/tzdb": "^6.141.0",
+    "all-the-cities": "^3.1.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "diacritics": "^1.3.0",
@@ -20,6 +21,7 @@
     "@dotenvx/dotenvx": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/all-the-cities": "^3.1.3",
     "@types/diacritics": "^1.3.3",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
