--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@effect/platform": "^0.58.20",
     "@effect/platform-node": "^0.53.19",
     "@effect/schema": "^0.68.1",
+    "@geo-maps/countries-land-10km": "^0.6.0",
     "@js-temporal/polyfill": "^0.4.4",
     "@observablehq/framework": "^1.9.0",
     "@vvo/tzdb": "^6.141.0",
