--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "effect": "^3.3.5",
     "i18n-iso-countries": "^7.11.2",
     "iso-639-1": "^3.1.2",
+    "orcid-utils": "^1.2.2",
     "world_countries_lists": "^2.9.0"
   },
   "devDependencies": {
