Avoid deploying Observable regressions
As the Observable framework heavily uses browser-side JavaScript, it's hard to tell if it's working once you load the page. This change introduces a basic browser test that it can load a particular page and can interact with it successfully.

Refs 8f6bc41df21770e6b6587d88e8f53815b5906076

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
     "exactOptionalPropertyTypes": true,
     "resolveJsonModule": true
   },
-  "include": ["src", "test", "*.ts"]
+  "include": ["integration", "src", "test", "*.ts"]
 }
