--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,6 +164,46 @@ jobs:
       - name: 'Run the tests'
         run: npx vitest run
 
+  test-integration:
+    name: 'Integration test'
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    if: github.event_name != 'schedule'
+    needs:
+      - build-dist
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v4.1.7
+
+      - name: 'Set up Node.js'
+        uses: actions/setup-node@v4.0.3
+        with:
+          node-version-file: package.json
+          cache: ${{ !env.ACT && 'npm' || '' }}
+
+      - name: 'Install dependencies'
+        run: npm ci
+
+      - name: 'Download dist'
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: dist
+          path: dist/
+
+      - name: 'Run Playwright'
+        id: 'playwright'
+        uses: docker://mcr.microsoft.com/playwright:v1.46.0-jammy
+        with:
+          args: env HOME=/root npx playwright test --forbid-only
+
+      - name: 'Store results'
+        if: failure() && steps.playwright.outcome == 'failure'
+        uses: actions/upload-artifact@v4.3.6
+        with:
+          name: integration-tests-result
+          path: integration-results
+
   typecheck:
     name: 'Typecheck'
     runs-on: ubuntu-22.04
@@ -198,6 +238,7 @@ jobs:
       - format
       - lint
       - test
+      - test-integration
       - typecheck
 
     steps:
