--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.6.4",
+    "@playwright/test": "^1.46.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/all-the-cities": "^3.1.3",
@@ -36,6 +37,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-sh": "^0.14.0",
     "prettier-plugin-toml": "^2.0.1",
+    "serve": "^14.2.3",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   },
