--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@dotenvx/dotenvx": "^1.32.0",
     "@playwright/test": "^1.49.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
-    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/node22": "^22.0.0",
     "@types/all-the-cities": "^3.1.3",
     "@types/diacritics": "^1.3.3",
     "@types/node": "^22.10.5",
@@ -41,6 +41,7 @@
     "vitest": "^2.1.8"
   },
   "engines": {
-    "node": ">=18"
+    "node": "22",
+    "npm": "9 || 10"
   }
 }
