Use a supported plugin that's compatible with import assertions
Refs https://github.com/PREreview/prereview.org/commit/efef8d27e772bcee1455232a431bd022d5a2fa32

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
   "arrowParens": "avoid",
-  "importOrder": ["^[./]"],
-  "importOrderSortSpecifiers": true,
   "printWidth": 120,
   "semi": false,
   "singleQuote": true,
-  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-sh", "prettier-plugin-toml"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-sh", "prettier-plugin-toml"]
 }
