--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
     "@playwright/test": "^1.49.1",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/all-the-cities": "^3.1.3",
     "@types/diacritics": "^1.3.3",
@@ -34,6 +33,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-markdown": "^5.1.0",
     "prettier": "^3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-sh": "^0.14.0",
     "prettier-plugin-toml": "^2.0.1",
     "serve": "^14.2.4",
