--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "exactOptionalPropertyTypes": true,
+    "module": "nodenext",
     "resolveJsonModule": true
   },
   "include": ["integration", "src", "test", "*.ts"]
