--- a/fly.toml
+++ b/fly.toml
@@ -9,7 +9,7 @@ strategy = "bluegreen"
 [http_service]
 internal_port = 80
 force_https = true
-auto_stop_machines = true
+auto_stop_machines = "suspend"
 auto_start_machines = true
 min_machines_running = 0
 processes = ['app']
