--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "prettier-plugin-sh": "^0.18.0",
     "prettier-plugin-toml": "^2.0.6",
     "serve": "^14.2.5",
+    "stylelint": "^16.24.0",
+    "stylelint-config-property-sort-order-smacss": "^10.0.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-use-logical-spec": "^5.0.1",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
