Add the favicon
Refs #558

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,5 @@
   "printWidth": 120,
   "semi": false,
   "singleQuote": true,
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-sh", "prettier-plugin-toml"]
+  "plugins": ["@prettier/plugin-xml", "prettier-plugin-organize-imports", "prettier-plugin-sh", "prettier-plugin-toml"]
 }
