--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.49.0",
     "@playwright/test": "^1.55.0",
+    "@prettier/plugin-xml": "^3.4.2",
     "@tsconfig/node22": "^22.0.2",
     "@types/all-the-cities": "^3.1.3",
     "@types/diacritics": "^1.3.3",
