--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@dotenvx/dotenvx": "^1.49.0",
     "@playwright/test": "^1.57.0",
     "@prettier/plugin-xml": "^3.4.2",
-    "@tsconfig/node22": "^22.0.2",
+    "@tsconfig/node24": "^24.0.3",
     "@types/all-the-cities": "^3.1.3",
     "@types/diacritics": "^1.3.3",
-    "@types/node": "^22.18.1",
+    "@types/node": "^24.10.4",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^8.57.0",
@@ -46,7 +46,7 @@
     "vitest": "^3.2.4"
   },
   "engines": {
-    "node": "22",
-    "npm": "9 || 10"
+    "node": "24",
+    "npm": "11"
   }
 }
